--- a/.github/workflows/openai-review.yml
+++ b/.github/workflows/openai-review.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           debug: true
           review_comment_lgtm: false
-          openai_heavy_model: gpt-4
+          openai_heavy_model: o3-mini
           path_filters: |
             !dist/**
             !**/*.lock
