--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@octokit/plugin-throttling": "^6.1.0",
     "minimatch": "^9.0.1",
     "node-fetch": "^3.3.1",
+    "openai": "^4.85.3",
     "p-limit": "^4.0.0",
     "p-retry": "^5.1.2"
   },
